--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,18 @@
 <mat-drawer-container class="mat-drawer-container" autosize>
-  <mat-drawer #drawer class="example-sidenav" mode="side">
-    <p>Auto-resizing sidenav</p>
+  <mat-drawer #drawer class="sidenav" [opened]="true" mode="side">
+    <div class="logo-container">Platz für logo</div>
+
+    <ul class="menu-item">
+      <li><mat-icon>fact_check</mat-icon>Dashboard</li>
+      <li><mat-icon>perm_identity</mat-icon>User</li>
+    </ul>
   </mat-drawer>
 
   <div class="example-sidenav-content">
     <mat-toolbar color="primary">
       <mat-toolbar-row>
         <mat-icon class="menu-icon" (click)="drawer.toggle()">menu</mat-icon>
-    
+
         <span>Simple CRM</span>
       </mat-toolbar-row>
     </mat-toolbar>
