--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,6 +3,47 @@
 }
 
 .menu-icon {
-
   cursor: pointer;
+  padding-right: 36px;
+}
+
+.sidenav {
+  width: 300px;
+}
+
+.logo-container {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.25);
+  padding-left: 16px;
+  padding-right: 16px;
+  min-height: 56px;
+  display: flex;
+  align-items: center;
+}
+
+mat-toolbar-row,
+mat-toolbar {
+  min-height: 56px;
+  height: 56px;
+}
+
+.menu-item {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+
+  li {
+    padding-left: 16px;
+    padding-right: 16px;
+    height: 48px;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+
+    mat-icon{
+      margin-right: 16px;}
+
+    &:hover {
+      background-color: rgba(0, 0, 0, 0.1);
+    }
+  }
 }
