--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,7 +12,7 @@
 }
 
 .logo-container {
-  border-bottom: 1px solid rgba(0, 0, 0, 0.25);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.04);
   padding-left: 16px;
   padding-right: 16px;
   min-height: 56px;
@@ -43,7 +43,18 @@ mat-toolbar {
       margin-right: 16px;}
 
     &:hover {
-      background-color: rgba(0, 0, 0, 0.1);
+      background-color: rgba(0, 0, 0, 0.04);
+    }
+
+    &:focus {
+      outline: none;
     }
   }
+}
+
+.router-container {
+ padding-left: 56px;
+  padding-right: 16px;
+  padding-top: 16px;
+ 
 }
