--- a/src/app/dialog-add-user/dialog-add-user.component.html
+++ b/src/app/dialog-add-user/dialog-add-user.component.html
@@ -1,1 +1,9 @@
-<p>dialog-add-user works!</p>
+<h1 mat-dialog-title>Add User</h1>
+<div mat-dialog-content>
+  Hier Nutzer hinzufügen
+</div>
+<div mat-dialog-actions>
+  <button mat-button>Cancel</button>
+  <button mat-button cdkFocusInitial>Save</button>
+</div>
+
