--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,6 +1,6 @@
 <p>user works!</p>
 
 
-<button class="add-user-btn" mat-fab color="primary"  matTooltip="Add user"  matTooltipPosition="above">
+<button (click)="openDialog()" class="add-user-btn" mat-fab color="primary"  matTooltip="Add user"  matTooltipPosition="above">
     <mat-icon>add</mat-icon>
   </button>
