design table for user

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,6 +1,34 @@
-<p>user works!</p>
+<mat-card>
+  <mat-card-content>
+    <table class="user-table">
+      <tr>
+        <th>Name</th>
+        <th>E-Mail</th>
+        <th>City</th>
+      </tr>
+      <tr>
+        <td>asdas</td>
+        <td>asdasd</td>
+        <td>asdasd</td>
+      </tr>
 
+      <tr>
+        <td>asdas</td>
+        <td>asdasd</td>
+        <td>asdasd</td>
+      </tr>
+      
+    </table>
+  </mat-card-content>
+</mat-card>
 
-<button (click)="openDialog()" class="add-user-btn" mat-fab color="primary"  matTooltip="Add user"  matTooltipPosition="above">
-    <mat-icon>add</mat-icon>
-  </button>
+<button
+  (click)="openDialog()"
+  class="add-user-btn"
+  mat-fab
+  color="primary"
+  matTooltip="Add user"
+  matTooltipPosition="above"
+>
+  <mat-icon>add</mat-icon>
+</button>
