--- a/src/app/user/user.component.scss
+++ b/src/app/user/user.component.scss
@@ -1,5 +1,41 @@
 .add-user-btn {
-    position: absolute;
-    right: 56px;
-    bottom: 56px;
+  position: absolute;
+  right: 56px;
+  bottom: 56px;
+}
+
+.user-table {
+  width: 100%;
+  border-collapse: collapse;
+  tr {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    &:first-child {
+      cursor: unset;
+      &:hover {
+        background-color: unset;
+      }
+
+    }
+
+    &:last-child {
+      border-bottom: 0;
+    }
+
+    &:hover {
+      background-color: rgba(0, 0, 0, 0.05);
+    }
+
+    cursor: pointer;
+  }
+
+  th {
+    color: rgba(0, 0, 0, 0.56);
+    font-size: 14px;
+    font-weight: 500;
+    text-align: start;
+  }
+
+  td {
+    height: 48px;
+  }
 }
