--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-drawer-container class="mat-drawer-container" autosize>
   <mat-drawer #drawer class="sidenav" [opened]="true" mode="side">
-    <div class="logo-container">Platz für logo</div>
+    <div class="logo-container"><img src="assets/img/simpleCRM.png" alt=""></div>
 
     <ul class="menu-item">
       <li routerLink="/dashboard" routerLinkActive="router-link-active"><mat-icon>fact_check</mat-icon>Dashboard</li>
@@ -13,7 +13,7 @@
       <mat-toolbar-row>
         <mat-icon class="menu-icon" (click)="drawer.toggle()">menu</mat-icon>
 
-        <span>Simple CRM</span>
+        <span>Simple. Effective. Successful.</span>
       </mat-toolbar-row>
     </mat-toolbar>
 
