--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -1,1 +1,19 @@
-<p>user-detail works!</p>
+<mat-card class="user-detail-header">
+  <mat-card-content>
+    <img src="assets\img\profile.svg" />
+    <div class="user-details">
+      <h2>Daniel Bergmann</h2>
+      <p>Software Developer</p>
+    </div>
+  </mat-card-content>
+</mat-card>
+
+<mat-card class="mt-32">
+  <mat-card-header>
+    <mat-card-title>Adress</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    Musterstadt <br />
+    citty
+  </mat-card-content>
+</mat-card>
