--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -2,8 +2,8 @@
   <mat-card-content>
     <img src="assets\img\profile.svg" />
     <div class="user-details">
-      <h2>Daniel Bergmann</h2>
-      <p>Software Developer</p>
+      <h2>{{ user.firstName}} {{user.lastName}}</h2>
+      <p>{{user.email}}</p>
     </div>
   </mat-card-content>
 </mat-card>
@@ -13,7 +13,7 @@
     <mat-card-title>Adress</mat-card-title>
   </mat-card-header>
   <mat-card-content>
-    Musterstadt <br />
-    citty
+    {{ user.street }} <br />
+    {{ user.zipCode }} {{ user.city }}
   </mat-card-content>
 </mat-card>
