add button for change user details

--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -2,14 +2,18 @@
   <mat-card-content>
     <img src="assets\img\profile.svg" />
     <div class="user-details">
-      <h2>{{ user.firstName}} {{user.lastName}}</h2>
-      <p>{{user.email}}</p>
+      <h2>{{ user.firstName }} {{ user.lastName }}</h2>
+      <p>{{ user.email }}</p>
     </div>
   </mat-card-content>
 </mat-card>
 
 <mat-card class="mt-32">
   <mat-card-header>
+    <button mat-icon-button class="pin-right-upper-corner" (click)="openAdressDialog();">
+      <mat-icon>more_vert</mat-icon>
+    </button>
+
     <mat-card-title>Adress</mat-card-title>
   </mat-card-header>
   <mat-card-content>
