--- a/src/app/user-detail/user-detail.component.scss
+++ b/src/app/user-detail/user-detail.component.scss
@@ -27,4 +27,11 @@
     h2 {
         margin-bottom: 0;
     }
+
+}
+
+.pin-right-upper-corner {
+    position: absolute;
+    top: 12px;
+    right: 6px;
 }
