add edit user and adress component

--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -1,5 +1,17 @@
 <mat-card class="user-detail-header">
   <mat-card-content>
+    <button
+      mat-icon-button
+      class="pin-right-upper-corner"
+      [matMenuTriggerFor]="userMenu"
+    >
+      <mat-icon>more_vert</mat-icon>
+    </button>
+
+    <mat-menu #userMenu="matMenu">
+      <button mat-menu-item (click)="editUserDetail()">Edit</button>
+    </mat-menu>
+
     <img src="assets\img\profile.svg" />
     <div class="user-details">
       <h2>{{ user.firstName }} {{ user.lastName }}</h2>
@@ -10,9 +22,17 @@
 
 <mat-card class="mt-32">
   <mat-card-header>
-    <button mat-icon-button class="pin-right-upper-corner" (click)="openAdressDialog();">
+    <button
+      mat-icon-button
+      class="pin-right-upper-corner"
+      [matMenuTriggerFor]="adressMenu"
+    >
       <mat-icon>more_vert</mat-icon>
     </button>
+
+    <mat-menu #adressMenu="matMenu">
+      <button mat-menu-item (click)="editAdressDetail()">Edit</button>
+    </mat-menu>
 
     <mat-card-title>Adress</mat-card-title>
   </mat-card-header>
