--- a/src/app/dialog-edit-adress/dialog-edit-adress.component.html
+++ b/src/app/dialog-edit-adress/dialog-edit-adress.component.html
@@ -1,1 +1,57 @@
-<p>dialog-edit-adress works!</p>
+<div class="dialog-container">
+    <h1 mat-dialog-title>Edit adress</h1>
+    <div mat-dialog-content>
+      
+
+  
+      <div>
+        <mat-form-field appearance="outline" class="full-with">
+          <mat-label>Street + House No.</mat-label>
+          <input
+    
+            [(ngModel)]="user.street"
+            matInput
+            placeholder="Adress"
+          />
+          <!-- <mat-hint>Please enter a name</mat-hint> -->
+        </mat-form-field>
+      </div>
+  
+      <div>
+        <mat-form-field appearance="outline" class="mr-16">
+          <mat-label>Zip code</mat-label>
+          <input
+    
+            [(ngModel)]="user.zipCode"
+            matInput
+            placeholder="Zip code"
+          />
+          <!-- <mat-hint>Please enter a name</mat-hint> -->
+        </mat-form-field>
+      </div>
+  
+      <div>
+        <mat-form-field appearance="outline">
+          <mat-label>City</mat-label>
+          <input
+                        [(ngModel)]="user.city"
+            matInput
+            placeholder="City"
+          />
+          <!-- <mat-hint>Please enter a name</mat-hint> -->
+        </mat-form-field>
+      </div>
+    </div>
+    <div mat-dialog-actions>
+      <button mat-button (click)="dialogRef.close();">Cancel</button>
+      <button
+        
+        (click)="saveUser()"
+        mat-button
+        cdkFocusInitial
+      >
+        Save
+      </button>
+    </div>
+  </div>
+  
