--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -1,4 +1,4 @@
-<mat-card class="user-detail-header">
+<mat-card class="user-detail-header" *ngIf="user">
   <mat-card-content>
     <button
       mat-icon-button
@@ -20,7 +20,7 @@
   </mat-card-content>
 </mat-card>
 
-<mat-card class="mt-32">
+<mat-card class="mt-32" *ngIf="user">
   <mat-card-header>
     <button
       mat-icon-button
