--- a/src/app/dialog-edit-adress/dialog-edit-adress.component.html
+++ b/src/app/dialog-edit-adress/dialog-edit-adress.component.html
@@ -2,7 +2,7 @@
   <h1 mat-dialog-title>Edit adress</h1>
   <div mat-dialog-content>
     <div>
-      <mat-form-field appearance="outline" class="mr-16">
+      <mat-form-field appearance="outline" class="mr-16 mt-32">
         <mat-label>Street + House No.</mat-label>
         <input [(ngModel)]="user.street" matInput placeholder="Adress" />
         <!-- <mat-hint>Please enter a name</mat-hint> -->
