--- a/src/app/dialog-add-user/dialog-add-user.component.html
+++ b/src/app/dialog-add-user/dialog-add-user.component.html
@@ -3,7 +3,7 @@
   <h1 mat-dialog-title>Add User</h1>
   <div mat-dialog-content>
     <div>
-      <mat-form-field class="mr-16" appearance="outline">
+      <mat-form-field class="mr-16 mt-32" appearance="outline">
         <mat-label>First Name</mat-label>
         <input
           [disabled]="loading"
@@ -11,7 +11,7 @@
           matInput
           placeholder="First Name"
         />
-        <!-- <mat-hint>Please enter a name</mat-hint> -->
+
       </mat-form-field>
 
       <mat-form-field appearance="outline">
@@ -22,7 +22,7 @@
           matInput
           placeholder="Last Name"
         />
-        <!-- <mat-hint>Please enter a name</mat-hint> -->
+    
       </mat-form-field>
     </div>
 
