--- a/src/app/dialog-edit-user/dialog-edit-user.component.html
+++ b/src/app/dialog-edit-user/dialog-edit-user.component.html
@@ -1,1 +1,29 @@
-<p>dialog-edit-user works!</p>
+<div class="dialog-container">
+  <h1 mat-dialog-title>Edit adress</h1>
+  <div mat-dialog-content>
+    <div>
+      <mat-form-field class="mr-16" appearance="outline">
+        <mat-label>First Name</mat-label>
+        <input [(ngModel)]="user.firstName" matInput placeholder="First Name" />
+      </mat-form-field>
+    </div>
+
+    <div>
+      <mat-form-field appearance="outline">
+        <mat-label>Last Name</mat-label>
+        <input [(ngModel)]="user.lastName" matInput placeholder="Last Name" />
+      </mat-form-field>
+    </div>
+
+    <div>
+      <mat-form-field appearance="outline" class="full-with">
+        <mat-label>E-Mail</mat-label>
+        <input [(ngModel)]="user.email" matInput placeholder="E-Mail" />
+      </mat-form-field>
+    </div>
+  </div>
+  <div mat-dialog-actions>
+    <button mat-button (click)="dialogRef.close()">Cancel</button>
+    <button (click)="saveUser()" mat-button cdkFocusInitial>Save</button>
+  </div>
+</div>
