--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,9 @@
     <div class="logo-container"><img src="assets/img/simpleCRM.png" alt=""></div>
 
     <ul class="menu-item">
-      <li routerLink="/dashboard" routerLinkActive="router-link-active"><mat-icon>fact_check</mat-icon>Weather</li>
+      <li routerLink="/dashboard" routerLinkActive="router-link-active"><mat-icon>sunny</mat-icon>Weather</li>
       <li routerLink="/user" routerLinkActive="router-link-active"><mat-icon>perm_identity</mat-icon>User</li>
+      <li routerLink="/translation" routerLinkActive="router-link-active"><mat-icon>translate</mat-icon>Translation</li>
     </ul>
   </mat-drawer>
 
