--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,10 @@
+<div class="background-video">
+  <video autoplay muted loop>
+    <source src="assets\video\clouds.mp4" type="video/mp4">
+    Your browser does not support HTML5 video.
+  </video>
+</div>
+
 <div>
   <form class="example-form">
     <mat-form-field class="example-full-width">
