--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
       <li (click)="shouldCloseDrawer() && drawer.close()" routerLink="/dashboard" routerLinkActive="router-link-active"><mat-icon>sunny</mat-icon>Weather</li>
       <li (click)="shouldCloseDrawer() && drawer.close()" routerLink="/user" routerLinkActive="router-link-active"><mat-icon>perm_identity</mat-icon>User</li>
       <li (click)="shouldCloseDrawer() && drawer.close()" routerLink="/translation" routerLinkActive="router-link-active"><mat-icon>translate</mat-icon>Translation</li>
+      <li (click)="shouldCloseDrawer() && drawer.close()" routerLink="/projekt-pakete" routerLinkActive="router-link-active"><mat-icon>local_shipping</mat-icon>Delivery</li>
     </ul>
   </mat-drawer>
 
