--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,96 +1,1 @@
-<div class="background-video">
-  <video autoplay muted loop>
-    <source src="assets\video\clouds.mp4" type="video/mp4">
-    Your browser does not support HTML5 video.
-  </video>
-</div>
-
-<div>
-  <form class="example-form">
-    <mat-form-field class="example-full-width">
-      <mat-label>Stadt</mat-label>
-      <input matInput #stadtInput type="text" />
-    </mat-form-field>
-    <br />
-    <button
-      mat-raised-button
-      color="primary"
-      (click)="getWetter(stadtInput.value)"
-    >
-      get weather
-    </button>
-  </form>
-</div>
-
-<br />
-<br />
-
-<div *ngFor="let item of vorschauDaten; let i = index">
-  <div *ngIf="i === 0">
-    <h3>
-      Current Temp.: {{ item.main.temp }} °C in {{ wetterDaten.city.name }}
-      <img
-        class="weather_icon"
-        src="http://openweathermap.org/img/w/{{ item.weather[0].icon }}.png"
-      />
-      {{ item.weather[0].description }}
-    </h3>
-
-    <p>
-      <span *ngIf="item.rain?.['3h']">
-        {{ item.rain["3h"] }} mm in the last 3 hours
-      </span>
-      <span *ngIf="!item.rain">No Rain</span> <br /><br />
-      <span> Wind {{ item.wind.speed }} m/s</span>
-    </p>
-  </div>
-</div>
-
-<div *ngIf="currentWetterDaten">
-  <p>
-    Sonnenaufgang: {{ currentWetterDaten.sys.sunrise * 1000 | date : "HH:mm" }}
-  </p>
-  <p>
-    Sonnenuntergang: {{ currentWetterDaten.sys.sunset * 1000 | date : "HH:mm" }}
-  </p>
-</div>
-
-<div *ngIf="wetterDaten">
-  <br />
-  <br />
-  <div *ngIf="wetterDaten.list.length > 0">
-    <div style="display: block">
-      <canvas
-        class="myChart"
-        baseChart
-        [datasets]="[
-          {
-            data: chartDataMin,
-            label: 'Min Temperatur',
-            backgroundColor: 'rgba(0,123,255,0.5)',
-            borderColor: 'rgba(0,123,255,1)',
-            tension: 0.4
-          },
-          {
-            data: chartDataMax,
-            label: 'Max Temperatur',
-            backgroundColor: 'rgba(220,53,69,0.5)',
-            borderColor: 'rgba(220,53,69,1)',
-            tension: 0.4
-          },
-          {
-            data: chartDataRain,
-            label: 'Niederschlag',
-            backgroundColor: 'rgba(23,162,184,0.5)',
-            borderColor: 'rgba(23,162,184,1)',
-            tension: 0.4
-          }
-        ]"
-        [labels]="chartLabels"
-        [options]="{ responsive: true, spanGaps: true }"
-        chartType="list"
-      >
-      </canvas>
-    </div>
-  </div>
-</div>
+<h2>Works</h2>
