--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,9 +4,10 @@
 
     <ul class="menu-item">
       <li (click)="shouldCloseDrawer() && drawer.close()" routerLink="/wetter" routerLinkActive="router-link-active"><mat-icon>sunny</mat-icon>Wetter</li>
-      <li (click)="shouldCloseDrawer() && drawer.close()" routerLink="/user" routerLinkActive="router-link-active"><mat-icon>perm_identity</mat-icon>User</li>
-      <li (click)="shouldCloseDrawer() && drawer.close()" routerLink="/translation" routerLinkActive="router-link-active"><mat-icon>translate</mat-icon>Translation</li>
-      <li (click)="shouldCloseDrawer() && drawer.close()" routerLink="/projekt-pakete" routerLinkActive="router-link-active"><mat-icon>local_shipping</mat-icon>Delivery</li>
+      <li (click)="shouldCloseDrawer() && drawer.close()" routerLink="/user" routerLinkActive="router-link-active"><mat-icon>bedroom_baby</mat-icon>Pferde</li>
+      <li (click)="shouldCloseDrawer() && drawer.close()" routerLink="/translation" routerLinkActive="router-link-active"><mat-icon>translate</mat-icon>Übersetzung</li>
+      <li (click)="shouldCloseDrawer() && drawer.close()" routerLink="/projekt-pakete" routerLinkActive="router-link-active"><mat-icon>local_shipping</mat-icon>Lieferungen</li>
+      <li (click)="shouldCloseDrawer() && drawer.close()" routerLink="/rain" routerLinkActive="router-link-active"><mat-icon>sunny</mat-icon>Rain Radar</li>
     </ul>
   </mat-drawer>
 
