--- a/src/app/dialog-add-user/dialog-add-user.component.html
+++ b/src/app/dialog-add-user/dialog-add-user.component.html
@@ -1,64 +1,102 @@
 <div class="dialog-container">
   <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
-  <h1 mat-dialog-title>Neue Einsteller Info</h1>
+  <h1 mat-dialog-title>User Information</h1>
   <div mat-dialog-content>
     <div>
       <mat-form-field class="mr-16 mt-32" appearance="outline">
-        <mat-label>Name des Pferdes</mat-label>
+        <mat-label>First Name</mat-label>
         <input
           [disabled]="loading"
-          [(ngModel)]="user.horseName"
+          [(ngModel)]="user.firstName"
           matInput
-          placeholder="Name des Pferdes"
+          placeholder="User Name"
         />
       </mat-form-field>
     </div>
 
     <div>
       <mat-form-field appearance="outline" class="full-with">
-        <mat-label>Besitzer</mat-label>
+        <mat-label>Last Name</mat-label>
         <input
           [disabled]="loading"
           [(ngModel)]="user.lastName"
           matInput
-          placeholder="Besitzer"
+          placeholder="Last Name"
         />
         <!-- <mat-hint>Please enter a name</mat-hint> -->
-      </mat-form-field>
-    </div>
-
-    <div>
-      <mat-form-field appearance="outline" class="full-with">
-        <mat-label>Datum</mat-label>
-        <input
-          [disabled]="loading"
-          [(ngModel)]="birthDate"
-          matInput
-          placeholder="Datum"
-          [matDatepicker]="picker1"
-        />
-        <mat-datepicker-toggle
-          matSuffix
-          [for]="picker1"
-        ></mat-datepicker-toggle>
-        <mat-datepicker #picker1></mat-datepicker>
-        <!-- <mat-hint>Please enter a date</mat-hint> -->
       </mat-form-field>
     </div>
 
     <div>
       <mat-form-field appearance="outline" class="mr-16">
-        <mat-label>Einsteller Information</mat-label>
+        <mat-label>Street</mat-label>
         <input
           [disabled]="loading"
-          [(ngModel)]="user.infos"
+          [(ngModel)]="user.street"
           matInput
-          placeholder="Einsteller Information"
+          placeholder="Street"
+        />
+        <!-- <mat-hint>Please enter a name</mat-hint> -->
+      </mat-form-field>
+    </div>
+
+    <div>
+      <mat-form-field appearance="outline" class="mr-16">
+        <mat-label>City</mat-label>
+        <input
+          [disabled]="loading"
+          [(ngModel)]="user.city"
+          matInput
+          placeholder="City"
+        />
+        <!-- <mat-hint>Please enter a name</mat-hint> -->
+      </mat-form-field>
+    </div>
+
+    <div>
+      <mat-form-field appearance="outline" class="mr-16">
+        <mat-label>Zip Code</mat-label>
+        <input
+          [disabled]="loading"
+          [(ngModel)]="user.zipCode"
+          matInput
+          placeholder="Zip Code"
+        />
+        <!-- <mat-hint>Please enter a name</mat-hint> -->
+      </mat-form-field>
+    </div>
+
+    <div>
+      <mat-form-field appearance="outline" class="mr-16">
+        <mat-label>E-Mail</mat-label>
+        <input
+          [disabled]="loading"
+          [(ngModel)]="user.email"
+          matInput
+          placeholder="E-Mail"
+        />
+        <!-- <mat-hint>Please enter a name</mat-hint> -->
+      </mat-form-field>
+    </div>
+
+    <div>
+      <mat-form-field appearance="outline" class="mr-16">
+        <mat-label>Phone</mat-label>
+        <input
+          [disabled]="loading"
+          [(ngModel)]="user.phoneNumber"
+          matInput
+          placeholder="Phone Number"
         />
         <!-- <mat-hint>Please enter a name</mat-hint> -->
       </mat-form-field>
     </div>
   </div>
+
+  <!--
+     
+    -->
+
   <div mat-dialog-actions>
     <button [disabled]="loading" mat-button (click)="dialogRef.close()">
       Cancel
