--- a/src/app/dialog-edit-user/dialog-edit-user.component.html
+++ b/src/app/dialog-edit-user/dialog-edit-user.component.html
@@ -1,42 +1,113 @@
 <div class="dialog-container">
-  <h1 mat-dialog-title>Edit adress</h1>
+  <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
+  <h1 mat-dialog-title>User Information</h1>
   <div mat-dialog-content>
     <div>
-      <mat-form-field class="mr-16" appearance="outline">
-        <mat-label>Name des Pferdes</mat-label>
-        <input [(ngModel)]="user.horseName" matInput placeholder="Name des Pferdes" />
-      </mat-form-field>
-    </div>
-
-    <div>
-      <mat-form-field appearance="outline">
-        <mat-label>Besitzer Pferd</mat-label>
-        <input [(ngModel)]="user.lastName" matInput placeholder="Besitzer Pferd" />
-      </mat-form-field>
-    </div>
-
-    <div>
-      <mat-form-field appearance="outline" class="full-with">
-        <mat-label>Einsteller Information</mat-label>
-        <input [(ngModel)]="user.infos" matInput placeholder="Einsteller Information" />
+      <mat-form-field class="mr-16 mt-32" appearance="outline">
+        <mat-label>First Name</mat-label>
+        <input
+          [disabled]="loading"
+          [(ngModel)]="user.firstName"
+          matInput
+          placeholder="User Name"
+        />
       </mat-form-field>
     </div>
 
     <div>
       <mat-form-field appearance="outline" class="full-with">
-        <mat-label>Datum</mat-label>
-        <input [(ngModel)]="user.birthDate"  [matDatepicker]="picker1" matInput placeholder="Datum" />
-        <mat-datepicker-toggle
-        matSuffix
-        [for]="picker1"
-      ></mat-datepicker-toggle>
-      <mat-datepicker #picker1></mat-datepicker>
-      
+        <mat-label>Last Name</mat-label>
+        <input
+          [disabled]="loading"
+          [(ngModel)]="user.lastName"
+          matInput
+          placeholder="Last Name"
+        />
+        <!-- <mat-hint>Please enter a name</mat-hint> -->
+      </mat-form-field>
+    </div>
+
+    <div>
+      <mat-form-field appearance="outline" class="mr-16">
+        <mat-label>Street</mat-label>
+        <input
+          [disabled]="loading"
+          [(ngModel)]="user.street"
+          matInput
+          placeholder="Street"
+        />
+        <!-- <mat-hint>Please enter a name</mat-hint> -->
+      </mat-form-field>
+    </div>
+
+    <div>
+      <mat-form-field appearance="outline" class="mr-16">
+        <mat-label>City</mat-label>
+        <input
+          [disabled]="loading"
+          [(ngModel)]="user.city"
+          matInput
+          placeholder="City"
+        />
+        <!-- <mat-hint>Please enter a name</mat-hint> -->
+      </mat-form-field>
+    </div>
+
+    <div>
+      <mat-form-field appearance="outline" class="mr-16">
+        <mat-label>Zip Code</mat-label>
+        <input
+          [disabled]="loading"
+          [(ngModel)]="user.zipCode"
+          matInput
+          placeholder="Zip Code"
+        />
+        <!-- <mat-hint>Please enter a name</mat-hint> -->
+      </mat-form-field>
+    </div>
+
+    <div>
+      <mat-form-field appearance="outline" class="mr-16">
+        <mat-label>E-Mail</mat-label>
+        <input
+          [disabled]="loading"
+          [(ngModel)]="user.email"
+          matInput
+          placeholder="E-Mail"
+        />
+        <!-- <mat-hint>Please enter a name</mat-hint> -->
+      </mat-form-field>
+    </div>
+
+    <div>
+      <mat-form-field appearance="outline" class="mr-16">
+        <mat-label>Phone</mat-label>
+        <input
+          [disabled]="loading"
+          [(ngModel)]="user.phoneNumber"
+          matInput
+          placeholder="Phone Number"
+        />
+        <!-- <mat-hint>Please enter a name</mat-hint> -->
       </mat-form-field>
     </div>
   </div>
+
+  <!--
+     
+    -->
+
   <div mat-dialog-actions>
-    <button mat-button (click)="dialogRef.close()">Cancel</button>
-    <button (click)="saveUser()" mat-button cdkFocusInitial>Save</button>
+    <button [disabled]="loading" mat-button (click)="dialogRef.close()">
+      Cancel
+    </button>
+    <button
+      [disabled]="loading"
+      (click)="saveUser()"
+      mat-button
+      cdkFocusInitial
+    >
+      Save
+    </button>
   </div>
 </div>
