--- a/src/app/user-detail/user-detail.component.scss
+++ b/src/app/user-detail/user-detail.component.scss
@@ -1,12 +1,12 @@
 .user-detail-header {
-  height: 240px;
-  background-color: lemonchiffon;
+  height: 50vh;
+  background-color: rgb(230, 230, 230);
   
 
   mat-card-content {
     display: flex;
     align-items: flex-end;
-    height: 22vh;
+    height: 30vh;
 
     img {
       width: 64px;
