--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,11 +3,15 @@
     <div class="logo-container"><img src="assets/img/simpleCRM.png" alt=""></div>
 
     <ul class="menu-item">
-      <li (click)="shouldCloseDrawer() && drawer.close()" routerLink="/wetter" routerLinkActive="router-link-active"><mat-icon>sunny</mat-icon>Wetter</li>
-      <li (click)="shouldCloseDrawer() && drawer.close()" routerLink="/user" routerLinkActive="router-link-active"><mat-icon>person_pin</mat-icon>User</li>
-      <li (click)="shouldCloseDrawer() && drawer.close()" routerLink="/translation" routerLinkActive="router-link-active"><mat-icon>translate</mat-icon>Übersetzung</li>
+
+      <li (click)="shouldCloseDrawer() && drawer.close()" routerLink="/user" routerLinkActive="router-link-active"><mat-icon>person_pin</mat-icon>Customer</li>
+      <li (click)="shouldCloseDrawer() && drawer.close()" routerLink="/car" routerLinkActive="router-link-active"><mat-icon>directions_car_filled</mat-icon>Car Info</li>
       <li (click)="shouldCloseDrawer() && drawer.close()" routerLink="/projekt-pakete" routerLinkActive="router-link-active"><mat-icon>local_shipping</mat-icon>Lieferungen</li>
-      <li (click)="shouldCloseDrawer() && drawer.close()" routerLink="/rain" routerLinkActive="router-link-active"><mat-icon>sunny</mat-icon>Rain Radar</li>
+
+      <li (click)="shouldCloseDrawer() && drawer.close()" routerLink="" routerLinkActive="router-link-active"><mat-icon></mat-icon></li>
+      <li (click)="shouldCloseDrawer() && drawer.close()" routerLink="/wetter" routerLinkActive="router-link-active"><mat-icon>sunny</mat-icon>Wetter</li>
+      <li (click)="shouldCloseDrawer() && drawer.close()" routerLink="/translation" routerLinkActive="router-link-active"><mat-icon>translate</mat-icon>Übersetzung</li>
+     
     </ul>
   </mat-drawer>
 
