--- a/src/app/car/car.component.html
+++ b/src/app/car/car.component.html
@@ -1,4 +1,4 @@
-<p>"NOTE! This is a free version of the Car API. Not all car models will work. Try: BMW, TOYOTA, FORD, VOLKSWAGEN. Thank you for your understanding."</p>
+<p>"NOTE! It's a free Car API Version. Not all car models will work. Try: BMW, TOYOTA, FORD, VOLKSWAGEN."</p>
 <div>
     <form class="example-form">
       <mat-form-field class="example-full-width">
