--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -34,5 +34,5 @@
   matTooltip="Neue Information hinzufügen"
   matTooltipPosition="above"
 >
-  <mat-icon>add</mat-icon>
+  <mat-icon>person_add</mat-icon>
 </button>
